# ukui-kwin

./: CMakeLists.txt  README.md  abstract_opengl_context_attribute_builder.h  abstract_output.h  abstract_wayland_output.h  dbusinterface.cpp  debug_console.h  effectloader.cpp  effectloader.h  effects.h  egl_context_attribute_builder.h  gestures.h  globalshortcuts.cpp  input.h  input_event_spy.h  linux_dmabuf.h  main.cpp  main.h  main_wayland.cpp  main_x11.cpp  modifier_only_shortcuts.h  orientation_sensor.h  outline.h  overlaywindow.h  platform.h  scene.h  udev.h  useractions.cpp  utils.h  virtualdesktops.h  virtualkeyboard.h  wayland_cursor_theme.h  x11eventfilter.h  xkb.h
autotests/: CMakeLists.txt
colorcorrection/: manager.h
data/: CMakeLists.txt  update_default_rules.cpp
debian/: control  libukui-kwin4-effect-builtins1.install  libukui-kwineffects12.install  libukui-kwinglutils12.install  libukui-kwinxrenderutils12.install  ukui-kwin-common.install  ukui-kwin-common.maintscript  ukui-kwin-data.install  ukui-kwin-data.qml-ignore  ukui-kwin-dev.acc.in  ukui-kwin-dev.install  ukui-kwin-wayland-backend-drm.install  ukui-kwin-wayland-backend-fbdev.install  ukui-kwin-wayland-backend-virtual.install  ukui-kwin-wayland-backend-wayland.install  ukui-kwin-wayland-backend-x11.install  ukui-kwin-wayland.install  ukui-kwin-wayland.lintian-overrides  ukui-kwin-wayland.postinst  ukui-kwin-x11.install  ukui-kwin-x11.links  ukui-kwin-x11.lintian-overrides  ukui-kwin-x11.postinst  ukui-kwin-x11.prerm
kcmkwin/common/: CMakeLists.txt  effectsmodel.cpp  effectsmodel.h
(+62 files in other folders)
